--- a/language_extraction.ipynb
+++ b/language_extraction.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "2946c034",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "f6744fca-1518-48f4-8915-37a05ca94279",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "1536"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,44 +130,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "3db98055",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_languages = ['English', 'Spanish', 'French', 'German', 'Italian', 'Dutch', 'Russian', 'Chinese',\n",
-    "'Japanese', 'Korean', 'Arabic', 'Portuguese', 'Swedish', 'Norwegian', 'Danish', 'Finnish', 'Hindi', 'Turkish', 'Greek']"
+    "languages = ['English', 'Spanish', 'French', 'German', 'Italian', 'Dutch', 'Russian', 'Chinese', 'Japanese', 'Korean',\n",
+    "'Arabic', 'Portuguese', 'Swedish', 'Norwegian', 'Danish', 'Finnish', 'Hindi', 'Turkish', 'Greek', 'Polish', 'Czech', 'Ukrainian', 'Hebrew']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "9b28d688-cbb7-4891-aff4-829e919f9cd8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19"
+       "23"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(train_languages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "e45fedd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_languages = ['Polish', 'Czech', 'Ukrainian', 'Hebrew']"
+    "len(languages)"
    ]
   },
   {
@@ -212,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "790425da-4739-47f5-ba5a-ff01024c5264",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1224,7 @@
        "[21 rows x 70 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "id": "eda98de7-35d8-446f-9d8f-f99086473a2a",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1324,7 @@
        "(21, 69, 1536)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 27,
    "id": "f1984452",
    "metadata": {},
    "outputs": [],
@@ -1471,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 28,
    "id": "47c3a14e-bd80-4234-8167-433a106d8770",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1471,7 @@
        "(21, 3, 1536)"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 29,
    "id": "d4439f9c-633d-4e5b-8d57-429b6bd9b316",
    "metadata": {},
    "outputs": [
@@ -1502,7 +1492,7 @@
        "67"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,15 +1502,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 259,
-   "id": "cfd1b7c6-0fce-496a-9b8a-b7c37871c967",
+   "cell_type": "raw",
+   "id": "401ee3aa-4a43-4026-9a0d-64e9453586e1",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# save all entities\n",
     "folder = './entities/'\n",
-    "for i, lang in enumerate(train_languages + test_languages):\n",
+    "for i, lang in enumerate(languages):\n",
     "    entity_arr = embd_np[:, i * 3: i * 3 + 3, :] - meanings\n",
     "    entity = entity_arr.mean(0).mean(0)\n",
     "    np.save(folder + lang.lower() +'.npy', entity)"
@@ -1528,36 +1516,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 31,
    "id": "95585df0-049b-4892-b9ed-c09fe3e19d8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "eng_entity_arr = embd_np[1:, :3, :] - meanings\n",
-    "fr_entity_arr = embd_np[1:, 6:9, :] - meanings\n",
-    "ch_entity_arr = embd_np[1:, 21:24, :] - meanings\n",
-    "heb_entity_arr = embd_np[1:, 66:69, :] - meanings"
+    "eng_entity_arr = embd_np[:, :3, :] - meanings\n",
+    "fr_entity_arr = embd_np[:, 6:9, :] - meanings\n",
+    "ch_entity_arr = embd_np[:, 21:24, :] - meanings\n",
+    "heb_entity_arr = embd_np[:, 66:69, :] - meanings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 49,
    "id": "9b836f04-1cb1-4c78-b6f3-3a6a17a580ba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.005494653480927692"
+       "0.03311794147198518"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eng_entity_arr.std(0).std(0).max()"
+    "eng_entity_arr.mean(0).mean(0).max()"
    ]
   },
   {
