example from meta model

--- a/language_extraction.ipynb
+++ b/language_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c8c73acc",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ab838406",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "db897d82-a34c-443e-8610-1aa913c1d70b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "681a7b2f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d906a5bf",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "95f17d96-42b5-4b8f-8a6d-dfa66054df70",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1c4efe8e-1e47-4de8-9826-ca0bdfa027a0",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "3db98055",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "9b28d688-cbb7-4891-aff4-829e919f9cd8",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "23"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "93bd8808-5e37-4def-ad8e-57ea686dadd5",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "06d21205",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "f316f66c",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "790425da-4739-47f5-ba5a-ff01024c5264",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
        "[21 rows x 70 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,11 +1234,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "900feaa5-fd47-4a73-8d46-f3687bb0f761",
+   "cell_type": "raw",
+   "id": "abecaca2-86dc-4ad1-9139-56e30f55b944",
    "metadata": {},
-   "outputs": [],
    "source": [
     "text_data1 = text_data.copy()"
    ]
@@ -1314,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "eda98de7-35d8-446f-9d8f-f99086473a2a",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1322,7 @@
        "(21, 69, 1536)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "f1984452",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "47c3a14e-bd80-4234-8167-433a106d8770",
    "metadata": {},
    "outputs": [
@@ -1471,7 +1469,7 @@
        "(21, 3, 1536)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "d4439f9c-633d-4e5b-8d57-429b6bd9b316",
    "metadata": {},
    "outputs": [
@@ -1492,7 +1490,7 @@
        "67"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1512,6 +1510,85 @@
     "    entity_arr = embd_np[:, i * 3: i * 3 + 3, :] - meanings\n",
     "    entity = entity_arr.mean(0).mean(0)\n",
     "    np.save(folder + lang.lower() +'.npy', entity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "803c6e27-a965-4031-982a-e23598b472c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entities = {}\n",
+    "for i, lang in enumerate(languages):\n",
+    "    entity_arr = embd_np[:, i * 3: i * 3 + 3, :] - meanings\n",
+    "    entities[lang] = entity_arr.mean(0).mean(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2d3ba332-1ff6-43ba-b4d1-9dc650c53567",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'English': array([-0.00071909, -0.01081806,  0.0233998 , ..., -0.00593629,\n",
+       "        -0.00052941,  0.01583778]),\n",
+       " 'Spanish': array([ 0.015884  , -0.01137658,  0.02254141, ...,  0.00485155,\n",
+       "         0.01338927,  0.0092479 ]),\n",
+       " 'French': array([ 0.00666887, -0.01062366,  0.01024823, ...,  0.00626572,\n",
+       "         0.00018394,  0.01670346]),\n",
+       " 'German': array([-0.01385595,  0.00274788, -0.00089954, ..., -0.00057139,\n",
+       "         0.00919268,  0.00804384]),\n",
+       " 'Italian': array([ 0.00424849, -0.02520039,  0.02031969, ...,  0.00877392,\n",
+       "        -0.00127031,  0.01131163]),\n",
+       " 'Dutch': array([-0.00924457,  0.00591337,  0.00981979, ...,  0.00440777,\n",
+       "        -0.00174235,  0.00716699]),\n",
+       " 'Russian': array([ 0.00249465,  0.00679944, -0.02867566, ..., -0.00141507,\n",
+       "        -0.00030273,  0.00294796]),\n",
+       " 'Chinese': array([ 0.01673501, -0.01639338,  0.00669248, ..., -0.00165165,\n",
+       "        -0.00734481,  0.00043519]),\n",
+       " 'Japanese': array([ 0.00816179, -0.01262672, -0.0035434 , ..., -0.00696967,\n",
+       "        -0.00384898, -0.00065031]),\n",
+       " 'Korean': array([ 0.00586233,  0.00956628, -0.01398383, ..., -0.00814213,\n",
+       "         0.00057252, -0.00498542]),\n",
+       " 'Arabic': array([ 0.00878138,  0.00518845,  0.02020583, ...,  0.00202091,\n",
+       "        -0.00894972, -0.00065297]),\n",
+       " 'Portuguese': array([ 0.00804119, -0.00204654,  0.01221084, ...,  0.00690709,\n",
+       "         0.0026629 ,  0.00862405]),\n",
+       " 'Swedish': array([-0.01485023, -0.01262002, -0.00922675, ..., -0.00245846,\n",
+       "        -0.01108233,  0.00630812]),\n",
+       " 'Norwegian': array([-0.01335266, -0.01011978,  0.00255193, ...,  0.00250568,\n",
+       "        -0.01218179,  0.0027897 ]),\n",
+       " 'Danish': array([-0.02000567,  0.0033614 , -0.00386219, ..., -0.00612388,\n",
+       "        -0.00855367, -0.01215156]),\n",
+       " 'Finnish': array([-1.43335957e-02, -1.71488477e-02,  7.26599157e-03, ...,\n",
+       "         4.76829082e-03, -1.84423881e-02, -8.25529946e-05]),\n",
+       " 'Hindi': array([ 0.00592011,  0.00012444, -0.01887222, ...,  0.00854681,\n",
+       "         0.01566345, -0.01089237]),\n",
+       " 'Turkish': array([ 0.00192752,  0.00631725,  0.01210999, ..., -0.01448389,\n",
+       "        -0.0012934 , -0.0181434 ]),\n",
+       " 'Greek': array([ 0.01349027,  0.00382979, -0.01737479, ...,  0.01595613,\n",
+       "         0.00136086,  0.00132958]),\n",
+       " 'Polish': array([-0.00294681,  0.02394908, -0.0022744 , ..., -0.01381874,\n",
+       "        -0.00248187, -0.00138654]),\n",
+       " 'Czech': array([-0.01715474,  0.02964096, -0.01153   , ..., -0.00541037,\n",
+       "         0.02446527, -0.02435052]),\n",
+       " 'Ukrainian': array([ 0.00724543,  0.02370373, -0.04332533, ..., -0.00300886,\n",
+       "         0.00398025,  0.00031465]),\n",
+       " 'Hebrew': array([ 0.00100231,  0.00783192,  0.00620214, ...,  0.00498655,\n",
+       "         0.0065526 , -0.0177652 ])}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entities"
    ]
   },
   {
